--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
 		"webpack-dev-server": "^4.15.1"
 	},
 	"dependencies": {
+		"i18next-browser-languagedetector": "^7.2.0",
+		"i18next-http-backend": "^2.4.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^14.0.5",
 		"react-router-dom": "^6.21.3"
 	}
 }
