--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/core": "^7.23.9",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"@svgr/webpack": "^8.1.0",
 		"@types/node": "^20.11.5",
 		"@types/react": "^18.2.48",
@@ -19,10 +21,13 @@
 		"@types/react-router-dom": "^5.3.3",
 		"@types/webpack": "^5.28.5",
 		"@types/webpack-dev-server": "^4.7.2",
+		"babel-loader": "^9.1.3",
+		"babel-plugin-i18next-extract": "^0.10.0",
 		"css-loader": "^6.9.1",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.0",
 		"mini-css-extract-plugin": "^2.7.7",
+		"react-refresh": "^0.14.0",
 		"sass": "^1.70.0",
 		"sass-loader": "^14.0.0",
 		"style-loader": "^3.3.4",
@@ -34,6 +39,7 @@
 		"webpack-dev-server": "^4.15.1"
 	},
 	"dependencies": {
+		"@babel/preset-env": "^7.23.9",
 		"i18next-browser-languagedetector": "^7.2.0",
 		"i18next-http-backend": "^2.4.3",
 		"react": "^18.2.0",
