--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,7 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": ["i18next-extract"]
+	"presets": [
+		["@babel/preset-env", { "targets": { "node": "current" } }],
+		"@babel/preset-typescript"
+	],
+	"plugins": ["i18next-extract"]
 }
