--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
 		"lint:ts": "eslint \"**/*.{ts,tsx}\"",
 		"lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
 		"lint:scss": "stylelint \"**/*.scss\"",
-		"lint:scss:fix": "stylelint \"**/*.scss\" --fix"
+		"lint:scss:fix": "stylelint \"**/*.scss\" --fix",
+		"unit": "jest --config ./config/jest/jest.config.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/core": "^7.23.9",
+		"@babel/preset-typescript": "^7.23.3",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"@svgr/webpack": "^8.1.0",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.5",
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
@@ -38,6 +41,8 @@
 		"eslint-plugin-react": "^7.33.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"mini-css-extract-plugin": "^2.7.7",
 		"react-refresh": "^0.14.0",
 		"sass": "^1.70.0",
