--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/core": "^7.23.9",
+		"@babel/preset-react": "^7.23.3",
 		"@babel/preset-typescript": "^7.23.3",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"@svgr/webpack": "^8.1.0",
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.2.1",
 		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.5",
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/webpack": "^5.28.5",
+		"@types/webpack-bundle-analyzer": "^4.7.0",
 		"@types/webpack-dev-server": "^4.7.2",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"babel-loader": "^9.1.3",
@@ -41,10 +45,12 @@
 		"eslint-plugin-react": "^7.33.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.0",
+		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"mini-css-extract-plugin": "^2.7.7",
 		"react-refresh": "^0.14.0",
+		"regenerator-runtime": "^0.14.1",
 		"sass": "^1.70.0",
 		"sass-loader": "^14.0.0",
 		"style-loader": "^3.3.4",
@@ -54,6 +60,7 @@
 		"ts-node": "^10.9.2",
 		"typescript": "^5.3.3",
 		"webpack": "^5.89.0",
+		"webpack-bundle-analyzer": "^4.10.1",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^4.15.1"
 	},
