--- a/package.json
+++ b/package.json
@@ -1,87 +1,87 @@
 {
-  "name": "react_ulbitv_course",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --env port=3000",
-    "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development",
-    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "lint:scss": "stylelint \"**/*.scss\"",
-    "lint:scss:fix": "stylelint \"**/*.scss\" --fix",
-    "unit": "jest --config ./config/jest/jest.config.ts",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@storybook/addon-essentials": "^7.6.14",
-    "@storybook/addon-interactions": "^7.6.14",
-    "@storybook/addon-links": "^7.6.14",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.14",
-    "@storybook/react": "^7.6.14",
-    "@storybook/react-webpack5": "^7.6.14",
-    "@storybook/test": "^7.6.14",
-    "@svgr/webpack": "^8.1.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/webpack": "^5.28.5",
-    "@types/webpack-bundle-analyzer": "^4.7.0",
-    "@types/webpack-dev-server": "^4.7.2",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-i18next-extract": "^0.10.0",
-    "css-loader": "^6.9.1",
-    "eslint": "^8.56.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-i18next": "^6.0.3",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-storybook": "^0.6.15",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "mini-css-extract-plugin": "^2.7.7",
-    "react-refresh": "^0.14.0",
-    "regenerator-runtime": "^0.14.1",
-    "sass": "^1.70.0",
-    "sass-loader": "^14.0.0",
-    "storybook": "^7.6.14",
-    "style-loader": "^3.3.4",
-    "stylelint": "^16.2.1",
-    "stylelint-config-standard-scss": "^13.0.0",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "webpack": "^5.89.0",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
-  "dependencies": {
-    "@babel/preset-env": "^7.23.9",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.5",
-    "react-router-dom": "^6.21.3"
-  }
+	"name": "react_ulbitv_course",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "webpack serve --env port=3000",
+		"build:prod": "webpack --env mode=production",
+		"build:dev": "webpack --env mode=development",
+		"lint:ts": "eslint \"**/*.{ts,tsx}\"",
+		"lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
+		"lint:scss": "stylelint \"**/*.scss\"",
+		"lint:scss:fix": "stylelint \"**/*.scss\" --fix",
+		"unit": "jest --config ./config/jest/jest.config.ts",
+		"storybook": "storybook dev -p 6006 -c ./config/storybook",
+		"build-storybook": "storybook build -c ./config/storybook"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/core": "^7.23.9",
+		"@babel/preset-react": "^7.23.3",
+		"@babel/preset-typescript": "^7.23.3",
+		"@storybook/addon-essentials": "^7.6.14",
+		"@storybook/addon-interactions": "^7.6.14",
+		"@storybook/addon-links": "^7.6.14",
+		"@storybook/addon-onboarding": "^1.0.11",
+		"@storybook/blocks": "^7.6.14",
+		"@storybook/react": "^7.6.14",
+		"@storybook/react-webpack5": "^7.6.14",
+		"@storybook/test": "^7.6.14",
+		"@svgr/webpack": "^8.1.0",
+		"@testing-library/jest-dom": "^6.4.2",
+		"@testing-library/react": "^14.2.1",
+		"@types/jest": "^29.5.12",
+		"@types/node": "^20.11.5",
+		"@types/react": "^18.2.48",
+		"@types/react-dom": "^18.2.18",
+		"@types/react-router-dom": "^5.3.3",
+		"@types/webpack": "^5.28.5",
+		"@types/webpack-bundle-analyzer": "^4.7.0",
+		"@types/webpack-dev-server": "^4.7.2",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"babel-loader": "^9.1.3",
+		"babel-plugin-i18next-extract": "^0.10.0",
+		"css-loader": "^6.9.1",
+		"eslint": "^8.56.0",
+		"eslint-config-standard-with-typescript": "^43.0.1",
+		"eslint-plugin-i18next": "^6.0.3",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-n": "^16.6.2",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-storybook": "^0.6.15",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^5.6.0",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"mini-css-extract-plugin": "^2.7.7",
+		"react-refresh": "^0.14.0",
+		"regenerator-runtime": "^0.14.1",
+		"sass": "^1.70.0",
+		"sass-loader": "^14.0.0",
+		"storybook": "^7.6.14",
+		"style-loader": "^3.3.4",
+		"stylelint": "^16.2.1",
+		"stylelint-config-standard-scss": "^13.0.0",
+		"ts-loader": "^9.5.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3",
+		"webpack": "^5.89.0",
+		"webpack-bundle-analyzer": "^4.10.1",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^4.15.1"
+	},
+	"dependencies": {
+		"@babel/preset-env": "^7.23.9",
+		"i18next-browser-languagedetector": "^7.2.0",
+		"i18next-http-backend": "^2.4.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-i18next": "^14.0.5",
+		"react-router-dom": "^6.21.3"
+	}
 }
