--- a/.github/workflows/for-example.yml
+++ b/.github/workflows/for-example.yml
@@ -1,19 +1,19 @@
 name: linting, testing, building
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
   push:
     branches: [ master ]
-  pull_requests:
+  pull_request:
     branches: [ master ]
 jobs:
   pipeline:
     runs-on: ubuntu-latest
     strategy: 
       matrix:
-        node-version: [ 16.20.1 ]
+        node-version: [ 16.x ]
+
     steps:
-      - uses: actions/=checkout@v2
-      - name: Staring Node.js ${{ matrix. node-version }}
+      - uses: actions/checkout@v2
+      - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with: 
           node-version: ${{ matrix.node-version }}
@@ -21,8 +21,6 @@ jobs:
         run: npm install
       - name: build production project
         run: npm run build:prod
-      - name: build development project
-        run: npm run build:dev
       - name: linting typescript
         run: npm run lint:ts
       - name: linting scss
