--- a/package.json
+++ b/package.json
@@ -78,11 +78,13 @@
 	},
 	"dependencies": {
 		"@babel/preset-env": "^7.23.9",
+		"@reduxjs/toolkit": "^2.2.1",
 		"i18next-browser-languagedetector": "^7.2.0",
 		"i18next-http-backend": "^2.4.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^14.0.5",
+		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.21.3"
 	}
 }
