--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"lint:scss:fix": "stylelint \"**/*.scss\" --fix",
 		"unit": "jest --config ./config/jest/jest.config.ts",
 		"storybook": "storybook dev -p 6006 -c ./config/storybook",
-		"build-storybook": "storybook build -c ./config/storybook"
+		"build-storybook": "storybook build -c ./config/storybook",
+		"prepare": "husky"
 	},
 	"keywords": [],
 	"author": "",
@@ -57,6 +58,7 @@
 		"eslint-plugin-storybook": "^0.6.15",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.6.0",
+		"husky": "^9.0.11",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
