--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 	"dependencies": {
 		"@babel/preset-env": "^7.23.9",
 		"@reduxjs/toolkit": "^2.2.1",
+		"axios": "^1.6.7",
 		"i18next-browser-languagedetector": "^7.2.0",
 		"i18next-http-backend": "^2.4.3",
 		"react": "^18.2.0",
