--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
 	"i18n-ally.localesPaths": ["public/locales", "src/shared/config/i18n"],
 	"i18n-ally.keystyle": "flat",
-	"cSpell.words": ["stylelint"]
+	"cSpell.words": ["responce", "stylelint"]
 }
