--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "webpack serve --env port=3000",
+		"start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
 		"start:dev:server": "node ./json-server/index.js",
 		"build:prod": "webpack --env mode=production",
 		"build:dev": "webpack --env mode=development",
@@ -46,6 +47,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"babel-loader": "^9.1.3",
 		"babel-plugin-i18next-extract": "^0.10.0",
+		"concurrently": "^8.2.2",
 		"css-loader": "^6.9.1",
 		"eslint": "^8.56.0",
 		"eslint-config-standard-with-typescript": "^43.0.1",
