--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "webpack serve --env port=3000",
-		"start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
+		"start:dev": "concurrently \"npm run start:dev:server\" \"npm run start\"",
 		"start:dev:server": "node ./json-server/index.js",
 		"build:prod": "webpack --env mode=production",
 		"build:dev": "webpack --env mode=development",
@@ -25,6 +25,7 @@
 		"@babel/core": "^7.23.9",
 		"@babel/preset-react": "^7.23.3",
 		"@babel/preset-typescript": "^7.23.3",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"@storybook/addon-essentials": "^7.6.14",
 		"@storybook/addon-interactions": "^7.6.14",
 		"@storybook/addon-links": "^7.6.14",
